# ecommerce

./: .env  Caddyfile  docker-compose.yaml
server/: .dockerignore  .gitignore  Caddyfile  Dockerfile  bun.lockb  docker-compose.yaml  package.json  pyproject.toml  seed.py  uno.config.ts
server/config/: jinja2.py  settings.py  urls.py
server/core/: forms.py  models.py
server/core/jinja2/: base.html
server/static/css/: main.css
server/store/: admin.py  models.py
server/store/migrations/: 0001_initial.py  0002_alter_category_options_productimage.py  0003_alter_productimage_options_alter_product_tags.py  0004_alter_product_name.py
server/users/: admin.py  forms.py  models.py  views.py
server/users/jinja2/users/: login.html  register.html
server/users/management/commands/: creategroups.py
server/users/migrations/: 0001_initial.py  0002_group.py
